add things and player

--- a/css/basic.css
+++ b/css/basic.css
@@ -3,12 +3,17 @@
     font-size: 14px;
 }
 
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 *, *:before, *:after {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
-  
+
 html, body {
   margin: 0;
   padding: 0;
