--- a/css/rooms.css
+++ b/css/rooms.css
@@ -8,13 +8,13 @@ h6 { font-size: 1.0rem; }
 p { font-size: 1.5rem; }
 
 header h1 {
-    text-shadow: 0px 0px 20px #00ff00;
+    text-shadow: 0px 0px 20px #25E525;
 }
 
 #area {
-    box-shadow:0px 0px 45px 20px #00ff0055;
+    box-shadow:0px 0px 45px 20px #25E52555;
     padding: 40px;
-    border: 2px solid #00ff0055;
+    border: 2px solid #25E52555;
     border-radius: 20px;
 }
 
@@ -35,7 +35,7 @@ header h1 {
 }
 
 .btn:hover {
-    color: #00ff0099;
+    color: #25E52599;
 }
 
 .btn p {
