--- a/css/basic.css
+++ b/css/basic.css
@@ -22,16 +22,15 @@ html, body {
 
 body {
   line-height: 1;
-  color: #00ff00;
   background-color: #000000;
-
 }
   
 /* ----------------------------------- */
 
 h1, h2, h3, h4, h5, h6, p { margin: 0; }
 
-hr { border-color: #00ff00; margin: 20px 0;}
+hr { margin: 20px 0;}
+
 /* ----------------------------------- */
 
 .flex-center {
