--- a/css/color-green.css
+++ b/css/color-green.css
@@ -1,5 +1,7 @@
 /* 25E525 / 00ff00 */
 
+.bkgColor { background-color: #00ff00; }
+
 .txtColor { color: #00ff00; }
 .txtColorSemi { color: #00ff00cc; }
 
