--- a/css/rooms.css
+++ b/css/rooms.css
@@ -23,18 +23,24 @@ p { font-size: 1.5rem; }
 } 
 
 .btn {
+    font-size: 1.0rem;
     cursor: pointer;
     display: inline-block;
 }
 
 .btn p {
-    line-height: 1.9rem;
+    line-height: 1.8rem;
+    font-size: 1.4rem;
 }
 
+.fish { margin-left: 30px; }
+
 .ls-1 { letter-spacing: 1px; }
-.ls-2 { letter-spacing: 2px; }
+.ls-2 { letter-spacing: 0px; }
 .ls-3 { letter-spacing: 3px; }
 .ls-4 { letter-spacing: 4px; }
 .ls-5 { letter-spacing: 5px; }
 .ls-6 { letter-spacing: 6px; }
 .ls-10 { letter-spacing: 10px; }
+
+.selected span { font-style: italic; text-decoration: underline; }
