--- a/css/color-gray.css
+++ b/css/color-gray.css
@@ -1,6 +1,7 @@
 /* B7B7B7 / FFBF00 */
 
 .bkgColor { background-color: #D8D8D8; }
+.bkgColorSemi { background-color: #D8D8D8cc; }
 
 .txtColor { color: #D8D8D8; }
 .txtColorSemi { color: #D8D8D8cc; }
