--- a/css/color-green.css
+++ b/css/color-green.css
@@ -1,6 +1,7 @@
 /* 25E525 / 00ff00 */
 
 .bkgColor { background-color: #00ff00; }
+.bkgColorSemi { background-color: #00ff00cc; }
 
 .txtColor { color: #00ff00; }
 .txtColorSemi { color: #00ff00cc; }
